--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -177,6 +177,16 @@
             "request": "launch",
             "mainClass": "edu.fra.uas.BeanExampleApplication",
             "projectName": "BeanExampleExtendedTesting"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-HomeworkApplication<homework1>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "edu.fra.uas.HomeworkApplication",
+            "projectName": "homework1",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
